# c_linux

./: .gitignore  README.md  mknew.sh
ccl/: Makefile  main.c
cgi/: README.md
cgi/env/: main.c
cgi/get/: main.c
cmake/: CMakeLists.txt  README.md
cmake/src/: CMakeLists.txt  main.c
cmake/utility/: CMakeLists.txt  utility.c
dir/: README.md  main.c
dlopen/: .caculate.c.swp  Makefile  caculate.c  main.c
domainToIp/: main.c
dynnamicLibrary/: Makefile  README.md  main.c
dynnamicLibrary/lib/: test.c
env/: app  main.c
epoll/: main.c
errno/: app  main.c
file/: README.md  main.c
fork/: app  main.c  main.c~
fscanf/: test.ini
fscnf/: demo.c
fuck/: README.md  main.c  test.bf
fun/changSelfNamec/: main.c
getchar/: main.c
gethostname/: main.c
getopt/: README.md  main.c
getopt_long/: app  main.c
ipToDomain/: main.c
lz/: main.c
mysql/: Makefile  README.md  main.c
opencv/: Makefile  main.cpp
pidChecck/: app
pidCheck/: main.c
pipe/: main.c
popen/: popen.c
pre_macro/: Makefile  main.c
process/: main.c  progress.h
process/src/: color.h  main.c  progress.c
pthread/: Makefile  thread.c
ptr/: main.c
putchar/: main.c
reflex/: main.c
shared_ptr/: Makefile  main.cpp
sigint/: main.c
so/: main.c
so/lib/: Makefile  test.h
sock/: server.c
sock.sock/: Makefile  client.c  define.h  readme
stand/atexit/: main.c
std_in_out/: main.c
stl/1_2/: main.cpp
strcat/: main.c
system/: main.c
thread/: thread_create.c
trylock/: Makefile  main.c
union/: main.c
