CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(CMakeTest)

#SET(WINLIBS)
IF(UNIX)
  SET(CMAKE_C_COMPILER gcc)
  #SET(CMAKE_C_COMPILER_ARG1 /usr/bin/gcc-5)
  SET(CMAKE_CXX_COMPILER g++)
  #SET(CMAKE_CXX_COMPILER_ARG1 /usr/bin/g++-5)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++ly -g -fpic -fPIC")
  set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -D_DEBUG -O0 -ggdb")
  set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2")
ENDIF(UNIX)

ADD_DEFINITIONS(-DPROTOBUF_INLINE_NOT_IN_HEADERS=0)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/../")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")

#INCLUDE_DIRECTORIES($ENV{GSL_ROOT}/include /usr/include/lua5.3 /usr/include/lua5.1)

#lib search path
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/)

#header search path
INCLUDE_DIRECTORIES(${PROJECT_ROOT_PATH}/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/utility)
INCLUDE_DIRECTORIES(.)

ADD_SUBDIRECTORY(utility)
ADD_SUBDIRECTORY(src)
